@@ -20,14 +20,15 @@
 package com.percussion.category.data;
 
 import com.percussion.server.PSRequest;
+import com.percussion.server.PSServer;
 import com.percussion.server.PSUserSessionManager;
 import com.percussion.share.service.exception.PSDataServiceException;
 import com.percussion.user.service.IPSUserService;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -41,6 +42,55 @@ public class PSCategoryLockInfo {
   private static final String LOCK_INFO_FILE = "lock_info.json";
 
   /**
+   * Test-only override for {@link #resolveLegacyLockInfoFile()}. The legacy file was historically
+   * resolved against the JVM current working directory (e.g. {@code new File("lock_info.json")}),
+   * which the JVM computes once from {@code user.dir} at startup and does not re-read. To exercise
+   * the backward-compat branch deterministically in unit tests we inject the path explicitly.
+   */
+  static Path legacyLockInfoOverride;
+
+  /**
+   * Test-only override for {@link #currentSessionId()}. Returns {@code null} when unset, meaning
+   * the production code path ({@link PSRequest#getContextForRequest()}) is used. Tests inject a
+   * concrete session id to avoid wiring a full servlet request into a unit test.
+   */
+  static String currentSessionIdOverride;
+
+  /**
+   * Resolves the canonical lock-info path under the CMS installation directory. The lock file lives
+   * under {@code $rxDir/lock_info.json} so that its location is independent of the JVM current
+   * working directory (e.g. when running as a Windows service with a non-default cwd). GH-1565.
+   *
+   * @return the lock-file path, never {@code null}
+   */
+  static Path resolveLockInfoFile() {
+    return Paths.get(PSServer.getRxDir().toURI()).resolve(LOCK_INFO_FILE);
+  }
+
+  /**
+   * Legacy lock-info path: {@code lock_info.json} resolved against the JVM current working
+   * directory. Used by installations created before GH-1565. Kept for backward-compatible reads
+   * only — all writes go to {@link #resolveLockInfoFile()}.
+   */
+  static Path resolveLegacyLockInfoFile() {
+    var override = legacyLockInfoOverride;
+    return override != null ? override : Paths.get(LOCK_INFO_FILE);
+  }
+
+  /**
+   * Returns the current request's session ID, or {@code ""} when no request is bound (matches
+   * {@link PSRequest#getUserSessionId()} semantics). Tests override via {@link
+   * #currentSessionIdOverride}.
+   */
+  static String currentSessionId() {
+    var override = currentSessionIdOverride;
+    if (override != null) {
+      return override;
+    }
+    return PSRequest.getContextForRequest().getUserSessionId();
+  }
+
+  /**
    * Writes lock info to file for the current user/session.
    *
    * @param userService user service, not null
@@ -50,16 +100,20 @@ public class PSCategoryLockInfo {
   public static void writeLockInfoToFile(IPSUserService userService, String date)
       throws PSDataServiceException {
     var lockInfo = new JSONObject();
-    var file = new File(LOCK_INFO_FILE);
+    var file = resolveLockInfoFile();
 
     var userName = userService.getCurrentUser().getName();
-    var sessionId = PSRequest.getContextForRequest().getUserSessionId();
-    try (var os = new FileOutputStream(file)) {
+    var sessionId = currentSessionId();
+    try {
+      var parent = file.getParent();
+      if (parent != null) {
+        Files.createDirectories(parent);
+      }
       lockInfo.put("userName", userName);
       lockInfo.put("sessionId", sessionId);
       lockInfo.put("creationDate", date);
 
-      os.write(lockInfo.toString().getBytes(StandardCharsets.UTF_8));
+      Files.writeString(file, lockInfo.toString(), StandardCharsets.UTF_8);
       log.debug("Created file with user information who has locked the Categories Tab.");
     } catch (IOException | JSONException e) {
       log.error("Exception writing lock info file - PSCategoryLockInfo.writeLockInfoToFile()", e);
@@ -77,17 +131,20 @@ public class PSCategoryLockInfo {
 
   /**
    * Reads lock info from file. Clears and returns null when the lock session is stale (no longer
-   * exists) — GH-1182 / v8.1.7 PR #1173.
+   * exists) — GH-1182 / v8.1.7 PR #1173. Reads from the canonical CMS-installation location first
+   * ({@link #resolveLockInfoFile()}); if that file is absent, falls back to the legacy cwd-relative
+   * location for backward compatibility with pre-8.2 installs — GH-1565.
    *
    * @return lock info as JSONObject, or null if not found/invalid/stale
    */
   public static JSONObject getLockInfo() {
-    var file = new File(LOCK_INFO_FILE);
-    if (!file.exists()) {
+    var canonical = resolveLockInfoFile();
+    var file = Files.exists(canonical) ? canonical : resolveLegacyLockInfoFile();
+    if (!Files.exists(file)) {
       return null;
     }
-    try (var is = new FileInputStream(file)) {
-      var lockInfoBytes = is.readAllBytes();
+    try {
+      var lockInfoBytes = Files.readAllBytes(file);
       if (lockInfoBytes.length == 0) {
         return null;
       }
@@ -149,13 +206,19 @@ public class PSCategoryLockInfo {
   }
 
   /**
-   * Removes the lock info file if it exists. Does not call {@link #getLockInfo()} (would recurse
-   * into stale-session checks).
+   * Removes the lock info file if it exists. Removes both the canonical and the legacy cwd-relative
+   * locations (GH-1565). Does not call {@link #getLockInfo()} (would recurse into stale-session
+   * checks).
    */
   public static void removeLockInfo() {
-    var file = new File(LOCK_INFO_FILE);
-    if (file.exists() && file.delete()) {
-      log.debug("Lock info file deleted successfully.");
+    for (var path : new Path[] {resolveLockInfoFile(), resolveLegacyLockInfoFile()}) {
+      try {
+        if (Files.deleteIfExists(path)) {
+          log.debug("Lock info file deleted successfully.");
+        }
+      } catch (IOException e) {
+        log.warn("Unable to delete lock info file at {} - {}", path, e.getMessage());
+      }
     }
   }
 }
